@@ -102,6 +102,7 @@ AC_MSG_ERROR(
 # Checks for header files.
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
+AC_CHECK_HEADERS(sys/param.h)
 
 
 ######################################################################
